--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -48,11 +48,11 @@
     {{- end -}}
 
 
-    <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
+    <link rel="stylesheet" href="{{ .Site.Params.staticPrefix }}{{ "/css/tailwind.min.css" | relURL }}" />
     <link rel="stylesheet" href="{{ .Site.Params.staticPrefix }}{{ "/css/main.css" | relURL }}" />
     <link rel="stylesheet" href="//at.alicdn.com/t/font_1607597_jhmihcvh0tm.css" />
     <link href="{{ .Site.Params.staticPrefix }}{{ "index.xml" | relURL }}" rel="alternate" type="application/rss+xml" title="{{ .Site.Title }}">
-    
+
     <!-- busuanzi -->
     {{- if .Site.Params.busuanzi -}}
       <script async src="//busuanzi.ibruce.info/busuanzi/2.3/busuanzi.pure.mini.js"></script>
