--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -3,16 +3,16 @@
 
 {{ partial "head.html" . }}
 
-<body class="bg-gray-100 text-gray-900 tracking-wider leading-normal">
+<body class="bg-gray-50 dark:bg-black font-sans text-gray-900 tracking-wider leading-normal">
 
     {{ partial "header.html" . }}
 
-    <div id="container" class="container w-full flex flex-wrap mx-auto px-2 lg:pt-12 mt-10">
+    <div id="container" class="container w-full flex flex-wrap mx-auto px-2 lg:pt-20 mt-10 max-w-screen-xl">
 
     {{- block "main" . }}{{- end }}
 
     </div>
-    
+
     {{ partial "footer.html" . }} {{ partial "scripts.html" . }}
 </body>
 
