--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,5 +1,5 @@
 <!-- Pin to top right corner -->
-<footer class="bg-white border-t border-gray-400 shadow mt-10">
+<footer class="bg-white mt-10">
     <div class="container  mx-auto flex py-8">
         <div class="w-full text-center text-gray-600 ">
             <p>
